# AlphaAgent-An-AI-Powered-Autonomous-Trading-System

./: .env  README.md  implementation_plan_new  main.py  pyproject.toml  requirements.txt
agent/: trader_agent.py
auth/: upstox_auth.py
dashboard/: README.md
data/: feed.py
orders/: manager.py
strategy/: orb.py  test_orb.py
