[project]
name = "algobot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "protobuf>=7.35.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "upstox-python-sdk>=2.27.0",
    "uvicorn>=0.49.0",
    "websockets>=16.0",
]
